plugins {
    id 'com.android.application'
}

android {
    namespace 'com.qlstudio.lite_kagg886'
    compileSdk 33

    defaultConfig {
        applicationId "com.qlstudio.lite_kagg886"
        minSdk 28
        targetSdk 33
        versionCode 7
        versionName "1.3"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {
    implementation project(':jxw_collector')


    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.navigation:navigation-fragment:2.4.1'
    implementation 'androidx.navigation:navigation-ui:2.4.1'

    implementation 'io.github.medyo:android-about-page:2.0.0' //关于页面库

    implementation "androidx.viewpager2:viewpager2:1.0.0"

    implementation "com.alibaba:fastjson:1.2.76"

    implementation("org.jsoup:jsoup:1.15.3")

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
}